--- a/signup.html
+++ b/signup.html
@@ -70,7 +70,7 @@
         <input type="text" placeholder="Enter user name" id="userInp" class="form-control mb-3"/>
         <input type="password" placeholder="Enter password" id="passInp" class="form-control mb-3"/>
         <button type="text"  id="sub_btn" class="btn w-100 btn-outline-primary mb-3">Sign Up</button>
-        <a href="login.html" class="badge-secondary">Already have an Account</a>
+        <a href="index.html" class="badge-secondary">Already have an Account</a>
         <div class="social-container">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
