--- a/dashboard.html
+++ b/dashboard.html
@@ -71,7 +71,7 @@
         <div class="tags">
             <p><b>Privacy</b> | <b>Terms</b> | <b>FAQs</b> | <b>Help</b></p>
             <p>&copy<a href="#">copyright</a> All Rights Reserved. Designed by
-                <a href="https://htmlcodex.com">Divya Sharma</a>
+                <a href="https://htmlcodex.com">Meetup</a>
             </p>
         </div>
         <div class="container-flex">
@@ -121,12 +121,12 @@
         sessionStorage.removeItem('user');
         localStorage.removeItem('user');
         localStorage.removeItem('keepLoggedIn');
-        window.location="login.html";
+        window.location="index.html";
     }
     window.onload = function(){
         getUsername();
         if(currentUser ==null){
-            signoutlink.href ="login.html";
+            signoutlink.href ="index.html";
         }
         else{
            
