--- a/signup.html
+++ b/signup.html
@@ -2,59 +2,60 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="    viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-    <title>Sign up</title>
-    <link rel="stylesheet" href="sign.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+  <title>Document</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="forms-container">
-            <div class="signin-signup">
-                <div class="box" style="width:350px">
-                    <h2 class="title">Signup Here!..</h2>
-                    <div class="input-field">
-                        <i class="fa fa-link"></i>
-                        <input type="url" placeholder="Enter Profile url" class="textinput" id="nameInp" />
-                    </div>
-                    <div class="input-field">
-                        <i class="fa fa-envelope"></i>
-                        <input type="email" placeholder="Enter Email" class="textinput" id="emailInp"  />
-                    </div>
-                    <div class="input-field">
-                        <i class="fa fa-user"></i>
-                        <input type="text" placeholder="Enter Full name"class="textinput" id="userInp" />
-                    </div>
-                    <div class="input-field">
-                        <i class="fa fa-lock"></i>
-                        <input type="password" placeholder="Enter Password" class="textinput" id="passInp" />
-                    </div>
-                    <button type="text" id="sub_btn" class="btn solid">Sign Up</button><br><br>
-                    <div class="social-container ">
-                        <a href="#" class="fa fa-facebook"></a>
-                        <a href="#" class="fa fa-twitter"></a>
-                        <a href="#" class="fa fa-google"></a>
-                        <a href="#" class="fa fa-linkedin"></a>
-                    </div>  
-                </div>
-            </div>
-        </div>
-        <div class="panels-container">
-            <div class="panel left-panel">
-                <div class="content">
-                    <h3>You don't have an account?</h3>
-                    <p>Create your account right now</p>
-                    <a href="index.html" class="badge-secondary"><button class="btn transparent"
-                            id="sign-up-btn">Log in</button></a>
-                </div>
-            </div>
-        </div>
+  <div class="container">
+    <div class="forms-container">
+      <div class="signin-signup">
+        <nav action="" class="sign-in-form">
+          <h2 class="title">Register Now!..</h2>
+          <div class="input-field">
+              <i class="fa fa-link"></i>
+              <input type="url" placeholder="Enter Profile url" class="textinput" id="nameInp" />
+          </div>
+          <div class="input-field">
+              <i class="fa fa-envelope"></i>
+              <input type="email" placeholder="Enter Email" class="textinput" id="emailInp"  />
+          </div>
+          <div class="input-field">
+              <i class="fa fa-user"></i>
+              <input type="text" placeholder="Enter Full name"class="textinput" id="userInp" />
+          </div>
+          <div class="input-field">
+              <i class="fa fa-lock"></i>
+              <input type="password" placeholder="Enter Password" class="textinput" id="passInp" />
+          </div>
+          <button type="text" id="sub_btn" class="btn solid">Sign Up</button><br><br>
+          <div class="social-container ">
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-google"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+          </div>  
+        </nav>
+        
+      </div>
     </div>
+    <div class="panels-container">
+      <div class="panel left-panel">
+        <div class="content">
+          <h3>You don't have an account?</h3>
+          <p>Create your account right now to follow people and like publications</p>
+          <a href="index.html" class="badge-secondary"><button class="btn transparent"
+            id="sign-up-btn">Log in</button></a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
-<script type="module" src="signup.js">  </script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"></script>
+<script type="module" src="signup.js"></script>
 </html>
