--- a/signup.html
+++ b/signup.html
@@ -32,6 +32,7 @@
           <div class="input-field">
               <i class="fa fa-lock"></i>
               <input type="password" placeholder="Enter Password" class="textinput" id="passInp" />
+              <i class="fa fa-eye" id="togglePassword" style="cursor: pointer;"></i>
           </div>
           <button type="text" id="sub_btn" class="btn solid">Sign Up</button><br><br>
           <div class="social-container ">
@@ -56,6 +57,17 @@
     </div>
   </div>
 </body>
+<script>
+  const togglePassword = document.querySelector("#togglePassword");
+  const password = document.querySelector("#passInp");
+  
+  togglePassword.addEventListener("click", function (e) {
+    const type =
+      password.getAttribute("type") === "password" ? "text" : "password";
+    password.setAttribute("type", type);
+    this.classList.toggle("fa-eye-slash");
+  });
+      </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"></script>
 <script type="module" src="signup.js"></script>
 </html>
