--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
               <input type="password" placeholder="Enter Password" class="textinput" id="passInp" />
               <i class="fa fa-eye" id="togglePassword" style="cursor: pointer;"></i>
           </div>
-          <button type="text" id="sub_btn" class="btn solid">Sign Up</button><br><br>
+          <button type="text" id="sub_btn" class="btn solid">Sign Up</button><br>
           <div class="social-container ">
               <a href="#" class="fa fa-facebook"></a>
               <a href="#" class="fa fa-twitter"></a>
