--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <h2 class="title">Login Here!..</h2>
                     <div class="input-field">
                         <i class="fa fa-user"></i>
-                        <input type="text" placeholder="Enter User name" class="textinput" id="userInp" />
+                        <input type="text" placeholder="Enter User name" class="textinput" id="userInp" required/>
                     </div>
                     <div class="input-field">
                         <i class="fa fa-lock"></i>
-                        <input type="password" placeholder="Enter Password" class="textinput" id="passInp" />
+                        <input type="password" placeholder="Enter Password" class="textinput" id="passInp" required/>
                         <i class="fa fa-eye" id="togglePassword" style="cursor: pointer;"></i>
                     </div>
                     <div class="form-check form-switch">
