--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <script src=" https://dev.anthonyfessy.com/lottie.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
   <title>Register here</title>
@@ -16,33 +17,34 @@
     <div class="forms-container">
       <div class="signin-signup">
         <nav action="" class="sign-in-form">
+          <span id="error" style="color: red;"></span>
           <h2 class="title">Register Now!..</h2>
           <div class="input-field">
-              <i class="fa fa-link"></i>
-              <input type="url" placeholder="Enter Profile url" class="textinput" id="nameInp" />
+            <i class="fa fa-link"></i>
+            <input type="url" placeholder="Enter Profile url" class="textinput" id="nameInp" required/>
           </div>
           <div class="input-field">
-              <i class="fa fa-envelope"></i>
-              <input type="email" placeholder="Enter Email" class="textinput" id="emailInp"  />
+            <i class="fa fa-envelope"></i>
+            <input type="email" placeholder="Enter Email" class="textinput" id="emailInp" required/>
           </div>
           <div class="input-field">
-              <i class="fa fa-user"></i>
-              <input type="text" placeholder="Enter Full name"class="textinput" id="userInp" />
+            <i class="fa fa-user"></i>
+            <input type="text" placeholder="Enter Full name" class="textinput" id="userInp" required/>
           </div>
           <div class="input-field">
-              <i class="fa fa-lock"></i>
-              <input type="password" placeholder="Enter Password" class="textinput" id="passInp" />
-              <i class="fa fa-eye" id="togglePassword" style="cursor: pointer;"></i>
+            <i class="fa fa-lock"></i>
+            <input type="password" placeholder="Enter Password" class="textinput" id="passInp" required/>
+            <i class="fa fa-eye" id="togglePassword" style="cursor: pointer;"></i>
           </div>
           <button type="text" id="sub_btn" class="btn solid">Sign Up</button><br>
           <div class="social-container ">
-              <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-google"></a>
-              <a href="#" class="fa fa-linkedin"></a>
-          </div>  
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+          </div>
         </nav>
-        
+
       </div>
     </div>
     <div class="panels-container">
@@ -50,24 +52,26 @@
         <div class="content">
           <h3>You don't have an account?</h3>
           <p>Create your account right now to follow people and like publications</p>
-          <a href="index.html" class="badge-secondary"><button class="btn transparent"
-            id="sign-up-btn">Log in</button></a>
+          <a href="index.html" class="badge-secondary"><button class="btn transparent" id="sign-up-btn">Log
+              in</button></a>
         </div>
       </div>
     </div>
+    <div id="box">
+      <div id="success"><h1>Thank You!</h1> <h3>Registration Completed</h3></div></div>
   </div>
 </body>
 <script>
   const togglePassword = document.querySelector("#togglePassword");
   const password = document.querySelector("#passInp");
-  
+
   togglePassword.addEventListener("click", function (e) {
     const type =
       password.getAttribute("type") === "password" ? "text" : "password";
     password.setAttribute("type", type);
     this.classList.toggle("fa-eye-slash");
   });
-      </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"></script>
+</script>
 <script type="module" src="signup.js"></script>
+
 </html>
