--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
       <div class="signup signin-signup">
         <nav action="" class="sign-in-form">
           <span id="error" style="color: red;"></span>
-          <h2 class="title">Register Now!..</h2>
+          <h2 class="title">Register Now</h2>
           <div class="input-field">
             <i class="fa fa-link"></i>
             <input type="url" placeholder="Enter Profile url" class="textinput" id="nameInp" required/>
