--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
         </div>
         <div class="navbar-links" id="navbar-links">
             <ul>
-                <li><a href="index.html" class="active"><i class="fas fa-home">
+                <li><a href="home.html" class="active"><i class="fas fa-home">
                             <div class="menu-items">Home</div>
                         </i></a></li>
                         <li><a href="message.html"><i class="fas fa-comment-alt">
@@ -139,7 +139,7 @@
                     <li><label><i class="fa-sharp fa-solid fa-camera"><input type="file" id="image" accept="image/*"
                                     style="display:none"></label></i>Photo</li>
                     <li><label><i class="fa-solid fa-video"><input type="file" id="video" accept="video/*"
-                                    style="display:none"></i>Vedio</li>
+                                    style="display:none"></i>Video</li>
                     <li><i class="fa-solid fa-calendar-days"></i>Event</li>
                     <li><button onclick="postMessage()" style="background-color: none;">Post</button></li>
                 </div>
