--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
           <h2 class="title">Login Here!..</h2>
                     <div class="input-field">
                         <i class="fa fa-user"></i>
-                        <input type="text" placeholder="Enter User name" class="textinput" id="userInp" required/>
+                        <input type="text" placeholder="Enter Full Name" class="textinput" id="userInp" required/>
                     </div>
+                    <span id="error1" style="color: #e00437;"></span>
                     <div class="input-field">
                         <i class="fa fa-lock"></i>
                         <input type="password" placeholder="Enter Password" class="textinput" id="passInp" required/>
                         <i class="fa fa-eye" id="togglePassword" style="cursor: pointer;"></i>
                     </div>
+                    <span id="error2" style="color: #e00437;"></span>
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" id="customSwitch1">
                         <label class="form-check-label" for="customSwitch1">Keep me Login</label>
