--- a/signup.html
+++ b/signup.html
@@ -17,25 +17,30 @@
     <div class="forms-container">
       <div class="signup signin-signup">
         <nav action="" class="sign-in-form">
-          <span id="error" style="color: #e00437;"></span>
           <h2 class="title">Register Now!..</h2>
+          <span id="error" style="color: #e00437;"></span>
           <div class="input-field">
             <i class="fa fa-link"></i>
             <input type="url" placeholder="Enter Profile url" class="textinput" id="nameInp" required/>
+            
           </div>
+          <span id="error1" style="color: #e00437;"></span>
           <div class="input-field">
             <i class="fa fa-envelope"></i>
             <input type="email" placeholder="Enter Email" class="textinput" id="emailInp" required/>
           </div>
+          <span id="error2" style="color: #e00437;"></span>
           <div class="input-field">
             <i class="fa fa-user"></i>
             <input type="text" placeholder="Enter Full name" class="textinput" id="userInp" required/>
           </div>
+          <span id="error3" style="color: #e00437;"></span>
           <div class="input-field">
             <i class="fa fa-lock"></i>
             <input type="password" placeholder="Enter Password" class="textinput" id="passInp" required/>
             <i class="fa fa-eye" id="togglePassword" style="cursor: pointer;"></i>
           </div>
+          <span id="error4" style="color: #e00437;"></span>
           <button type="text" id="sub_btn" class="btn solid">Sign Up</button><br>
           <div class="social-container ">
             <a href="#" class="fa fa-facebook"></a>
